<?xml version="1.0"?>
<package format="2">
  <name>livox2ros</name>
  <version>0.0.0</version>
  <description>Conversion package from livox data to ROSBAG</description>
  <maintainer email="tomoya.sato@map4.jp">Tomoya-Sato</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
</package>
